--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,8 +23,10 @@ a {
 	--black: #3B434E;
 	--white: white;
 	--primary: #7653FC;
+	--primary-hover: #6344DF;
 	--red: #FC836D;
 	--green: #1DC37E;
 	--green-light: #C8F8E4;
+	--gray-light: #EBEBEB;
 	--font-family: 'Open Sans', sans-serif;
 }
